hphp/test/slow/coeffects/write_props/pure-lambda-not-inherited-error.php.expectf
Fatal error: Writing to object properties requires the capability WriteProperty, which is not provided by the context in %s on line 13
